<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_string"/>

    <EditText
        android:id="@+id/descriptionET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameET"
        android:hint="@string/description_string" />

    <TextView
        android:id="@+id/daySpinnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionET"
        android:text="@string/day_spinner_string"
        android:textSize="18sp"/>
    <Spinner
        android:id="@+id/daySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_below="@id/descriptionET"
        android:hint="@string/day_spinner_string"/>

    <TextView
        android:id="@+id/timeSpinnerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/daySpinner"
        android:text="@string/time_spinner_string"
        android:textSize="18sp"/>
    <Spinner
        android:id="@+id/timeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/daySpinner"
        android:layout_alignLeft="@+id/daySpinner"
        android:layout_alignStart="@+id/daySpinner" />
</RelativeLayout>